--- a/src/Runtime/pdf3/infra/kustomize/local-syncroot-standard/kustomization.yaml
+++ b/src/Runtime/pdf3/infra/kustomize/local-syncroot-standard/kustomization.yaml
@@ -5,14 +5,21 @@ resources:
   - ../../../../../../infra/runtime/syncroot/base/pdf.yaml
   - ../../../../../../infra/runtime/syncroot/base/pdf3.yaml
 patches:
-  # pdf-generator standard replicas configuration
+  # pdf-generator disabled (old generator decommissioned, but keep HelmRelease for infrastructure)
   - target:
       kind: HelmRelease
       name: pdf-generator
     patch: |-
       - op: replace
+        path: /spec/values/replicaCount
+        value: 0
+      - op: replace
         path: /spec/values/environment
         value: local
+      - op: replace
+        path: /spec/values/autoscaling
+        value:
+          enabled: false
       - op: replace
         path: /spec/values/image
         value:
@@ -56,15 +63,4 @@ patches:
         upgrade_channel: local
         environment: local
         serviceowner: ttd
-  - target:
-      kind: HTTPRoute
-      name: pdf3-migration
-      namespace: pdf
-    patch: |-
-      - op: replace
-        path: /spec/rules/0/backendRefs/0/weight
-        value: 100
-      - op: replace
-        path: /spec/rules/0/backendRefs/1/weight
-        value: 0
 
