--- a/.github/workflows/mcp-build.yaml
+++ b/.github/workflows/mcp-build.yaml
@@ -4,7 +4,11 @@ on:
   pull_request:
     paths:
       - 'src/AI/mcp/**'
-  workflow_dispatch:
+  push:
+    branches:
+      - mcp-build-workflow
+    paths:
+      - 'src/AI/mcp/**'
 
 jobs:
   build:
