--- a/src/AI/mcp/pyproject.toml
+++ b/src/AI/mcp/pyproject.toml
@@ -13,7 +13,7 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "mcp==1.12.4",
-    "fastmcp==2.11.2",
+    "fastmcp>=2.0.0",
     "pydantic==2.11.10",
     "pydantic-core==2.33.2",
     "pydantic-settings==2.10.1",
