--- a/src/cli/src/altinn-studio-cli/altinn-studio-cli.csproj
+++ b/src/cli/src/altinn-studio-cli/altinn-studio-cli.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Folder Include="Upgrade\Backend\" />
     <Folder Include="Upgrade\Frontend\" />
+    <Folder Include="Upgrade\Next\" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Deterministic)'=='true'">
