fix: make renovate keep the v prefix in the .tool-versions file in the go fixture

--- a/renovate.json
+++ b/renovate.json
@@ -93,6 +93,7 @@
       "matchStrings": [
         "# renovate: datasource=(?<datasource>\\S+) depName=(?<depName>\\S+)\\n[^\\s]+\\s+(?<currentValue>\\S+)"
       ],
+      "extractVersionTemplate": "^(?<version>v.*)$",
       "versioningTemplate": "semver"
     }
   ],
