--- a/.github/workflows/runtime-pdf3-build.yml
+++ b/.github/workflows/runtime-pdf3-build.yml
@@ -5,6 +5,7 @@ on:
     types: [opened, reopened, synchronize, ready_for_review]
     paths:
       - 'src/Runtime/pdf3/**'
+      - 'src/Runtime/test/fixture/**'
       - '.github/workflows/runtime-pdf3-build.yml'
   workflow_dispatch:
 
