tests for client_state statemachine logic, bugfixes

--- a/src/Runtime/operator/config/crd/bases/resources.altinn.studio_maskinportenclients.yaml
+++ b/src/Runtime/operator/config/crd/bases/resources.altinn.studio_maskinportenclients.yaml
@@ -72,6 +72,10 @@ spec:
                       description: Timestamp when the action was executed
                       format: date-time
                       type: string
+                    traceId:
+                      description: TraceId is the OTel trace ID for correlating with
+                        observability backends
+                      type: string
                   required:
                   - command
                   - result
