--- a/.github/workflows/runtime-operator-build.yml
+++ b/.github/workflows/runtime-operator-build.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Build
         run: make build
 
+      - name: Lint
+        run: make lint
+
       - name: Run tests
         run: make test
 
