--- a/infra/runtime/syncroot/base/flux-notifications.yaml
+++ b/infra/runtime/syncroot/base/flux-notifications.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   type: generic
-  address: http://studio-gateway.runtime-gateway.svc.cluster.local/api/v1/flux/webhook
+  address: http://studio-gateway-internal.runtime-gateway.svc.cluster.local/api/v1/flux/webhook
 ---
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
@@ -13,7 +13,7 @@ metadata:
   name: helm-releases
   namespace: flux-system
 spec:
-  summary: "HelmRelease alert for altinn apps."
+  summary: 'HelmRelease alert for altinn apps.'
   eventMetadata:
     serviceOwner: ${SERVICEOWNER_ID}
     environment: ${ENVIRONMENT}
