chore: tests based on kind-fixture for internal flux notification endpoint

--- a/src/Runtime/StudioGateway/infra/kustomize/local/kustomization.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/local/kustomization.yaml
@@ -3,6 +3,31 @@ kind: Kustomization
 resources:
   - ../base
 patches:
+  # Set local image and pull policy
+  - target:
+      kind: Deployment
+      name: studio-gateway
+    patch: |-
+      - op: replace
+        path: /metadata/annotations/altinn.studio~1image
+        value: "localhost:5001/studio-gateway:latest"
+      - op: replace
+        path: /spec/template/spec/containers/0/image
+        value: "localhost:5001/studio-gateway:latest"
+      - op: replace
+        path: /spec/template/spec/containers/0/imagePullPolicy
+        value: "Always"
+      - op: replace
+        path: /spec/replicas
+        value: 1
+  # Delete PDB for local (single replica)
+  - patch: |-
+      $patch: delete
+      apiVersion: policy/v1
+      kind: PodDisruptionBudget
+      metadata:
+        name: studio-gateway-pdb
+  # Update ingress for local traefik
   - target:
       kind: IngressRoute
       name: studio-gateway
