--- a/src/Runtime/StudioGateway/tests/StudioGateway.Api.Tests/StudioGateway.Api.Tests.csproj
+++ b/src/Runtime/StudioGateway/tests/StudioGateway.Api.Tests/StudioGateway.Api.Tests.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="KubernetesClient" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit.v3" />
