--- a/src/Runtime/operator/docker-compose.yml
+++ b/src/Runtime/operator/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-  lgtm:
-    image: grafana/otel-lgtm:0.7.6
-    container_name: operator-grafana-lgtm
-    ports:
-      - "3000:3000"   # Grafana
-      - "4317:4317"   # OTLP gRPC receiver
-      - "4318:4318"   # OTLP HTTP receiver
+  # lgtm:
+  #   image: grafana/otel-lgtm:0.7.6
+  #   container_name: operator-grafana-lgtm
+  #   ports:
+  #     - "3000:3000"   # Grafana
+  #     - "4317:4317"   # OTLP gRPC receiver
+  #     - "4318:4318"   # OTLP HTTP receiver
 
   fakes:
     container_name: operator-fakes
