--- a/src/App/frontend/package.json
+++ b/src/App/frontend/package.json
@@ -6,14 +6,15 @@
   "license": "3-Clause BSD",
   "exports": "./src/index.tsx",
   "scripts": {
+    "postinstall": "husky",
     "cy:all": "tsx scripts/cypress-run-all.ts",
     "gen": "tsx src/codegen/run.ts",
     "copy-schemas": "tsx scripts/copy-schemas.ts",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.development.js --mode development --progress",
     "build": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
     "docker": "yarn gen && yarn copy-schemas && cross-env NODE_ENV=development webpack --config webpack.config.development.js --progress && yarn serve 8080",
-    "serve": "http-server dist --cors='*' -p 8080",
-    "test": "yarn gen && jest --outputFile=./jest-results.json",
+    "serve": "http-server dist --cors='*' -p",
+    "test": "yarn gen && jest",
     "test:watch": "yarn gen && jest --watch",
     "test:watchall": "yarn gen && jest --watchAll",
     "test:preview": "jest-preview",
@@ -28,8 +29,7 @@
     "tsc:watch": "yarn gen && tsc --watch",
     "tsc:watch:cypress": "yarn gen && tsc --watch --project test/tsconfig.json",
     "lint": "yarn gen && eslint .",
-    "bench": "tsx --expose_gc --tsconfig benchmarks/tsconfig.json benchmarks/${0}",
-    "lhci": "lhci autorun"
+    "bench": "tsx --expose_gc --tsconfig benchmarks/tsconfig.json benchmarks/${0}"
   },
   "devDependencies": {
     "@babel/core": "7.28.5",
@@ -40,7 +40,6 @@
     "@babel/runtime-corejs3": "7.28.4",
     "@eslint/compat": "1.4.1",
     "@faker-js/faker": "10.1.0",
-    "@lhci/cli": "^0.15.1",
     "@percy/cli": "1.31.4",
     "@percy/cypress": "3.1.6",
     "@pmmmwh/react-refresh-webpack-plugin": "0.6.1",
@@ -53,7 +52,6 @@
     "@types/dot-object": "2.1.6",
     "@types/jest": "30.0.0",
     "@types/js-levenshtein": "1.1.3",
-    "@types/js-yaml": "^4",
     "@types/json-schema": "7.0.15",
     "@types/leaflet": "1",
     "@types/marked": "6.0.0",
@@ -103,6 +101,7 @@
     "fork-ts-checker-webpack-plugin": "9.1.0",
     "globals": "16.5.0",
     "http-server": "14.1.1",
+    "husky": "9.1.7",
     "identity-obj-proxy": "3.0.0",
     "jest": "30.2.0",
     "jest-environment-jsdom": "30.2.0",
@@ -110,12 +109,11 @@
     "jest-mock-axios": "4.9.0",
     "jest-preview": "0.3.2",
     "js-levenshtein": "1.1.6",
-    "js-yaml": "^4.1.0",
     "jsdom": "patch:jsdom@npm%3A26.1.0#~/.yarn/patches/jsdom-npm-26.1.0-3857255f02.patch",
+    "lint-staged": "16.2.6",
     "mime": "4.1.0",
     "mini-css-extract-plugin": "2.9.4",
     "prettier": "3.6.2",
-    "puppeteer": "^24.29.0",
     "react-refresh": "0.18.0",
     "resize-observer-polyfill": "1.5.1",
     "source-map-loader": "5.0.0",
@@ -184,6 +182,14 @@
     "zustand": "5.0.8"
   },
   "packageManager": "yarn@4.10.3",
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      ".husky/pre-commit-check-for-skipped-tests",
+      "yarn eslint --cache --fix"
+    ],
+    "*.json": "yarn eslint --cache --fix",
+    "*.{css,md}": "yarn prettier --write"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
