--- a/App/App.csproj
+++ b/App/App.csproj
@@ -5,12 +5,12 @@
     <RootNamespace>Altinn.App</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Altinn.App.Api" Version="8.6.0-preview.3">
+    <PackageReference Include="Altinn.App.Api" Version="8.8.3">
       <CopyToOutputDirectory>lib\$(TargetFramework)\*.xml</CopyToOutputDirectory>
     </PackageReference>
-    <PackageReference Include="Altinn.App.Core" Version="8.6.0-preview.3" />
+    <PackageReference Include="Altinn.App.Core" Version="8.8.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
