add maskinporten config for gateway client registration

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -73,6 +73,13 @@
             "ExhangeToAltinnToken": "true"
         }
     },
+    "MaskinportenClientForRuntime": {
+        "Test": {
+            "ClientId": "",
+            "Jwk": "",
+            "Scope": "altinn:studio/gateway"
+        }
+    },
     "ResourceRegistryIntegrationSettings": {
         "YT01": {
             "ResourceRegistryEnvBaseUrl": "https://platform.yt01.altinn.cloud"
