--- a/src/Runtime/operator/config/at23/kustomization.yaml
+++ b/src/Runtime/operator/config/at23/kustomization.yaml
@@ -1,3 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: []
+resources:
+  - ../default
+patches:
+  - path: operator-config-patch.yaml
