chore: multiple maskinporten issuer auth

--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -7,6 +7,9 @@
     },
     "AllowedHosts": "*",
     "Maskinporten": {
-        "MetadataAddress": "https://maskinporten.dev/.well-known/oauth-authorization-server/"
+        "MetadataAddresses": [
+            "https://test.maskinporten.no/.well-known/oauth-authorization-server",
+            "https://maskinporten.no/.well-known/oauth-authorization-server"
+        ]
     }
 }
