--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.prod.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.prod.json
@@ -1,5 +1,5 @@
 {
     "Maskinporten": {
-        "MetadataAddress": "https://maskinporten.no/.well-known/oauth-authorization-server"
+        "MetadataAddresses": ["https://maskinporten.no/.well-known/oauth-authorization-server"]
     }
 }
