chore: auth logging
configurable scope auth

fix scopes

--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -10,6 +10,7 @@
         "MetadataAddresses": [
             "https://test.maskinporten.no/.well-known/oauth-authorization-server",
             "https://maskinporten.no/.well-known/oauth-authorization-server"
-        ]
+        ],
+        "RequiredScope": "altinn:studio/gateway"
     }
 }
