--- a/src/Designer/backend/src/Designer/appsettings.Development.json
+++ b/src/Designer/backend/src/Designer/appsettings.Development.json
@@ -20,5 +20,9 @@
     },
     "OidcLoginSettings": {
         "FetchClientIdAndSecretFromRootEnvFile": true
+    },
+    "AltinitySettings": {
+        "AgentUrl": "http://localhost:8071",
+        "TimeoutSeconds": 300
     }
 }
