--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/StudioGateway.Api.csproj
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/StudioGateway.Api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
+    <PackageReference Include="KubernetesClient.Aot" />
   </ItemGroup>
 
 </Project>
