--- a/src/Runtime/StudioGateway/tests/StudioGateway.Api.Tests/StudioGateway.Api.Tests.csproj
+++ b/src/Runtime/StudioGateway/tests/StudioGateway.Api.Tests/StudioGateway.Api.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="KubernetesClient" />
+    <PackageReference Include="KubernetesClient.Aot" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
