--- a/src/Runtime/operator/localtest.env
+++ b/src/Runtime/operator/localtest.env
@@ -5,3 +5,5 @@ maskinporten_api.jwk='{"use":"sig","kty":"RSA","kid":"b9263e99-b2e4-4e16-b7eb-cc
 maskinporten_api.scope=idporten:dcr.altinn
 org_registry.url=http://localhost:8052/orgs/altinn-orgs.json
 controller.requeue_after=24h
+controller.jwk_rotation_threshold=23d
+controller.jwk_expiry=30d
