feat: add Maskinporten auth

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -100,7 +100,15 @@
     },
     "FeatureManagement": {
         "GitOpsDeploy": false,
-        "AnsattPorten": false
+        "AnsattPorten": false,
+        "Maskinporten": false
+    },
+    "Maskinporten": {
+        "MetadataAddresses": [
+            "https://test.maskinporten.no/.well-known/oauth-authorization-server",
+            "https://maskinporten.no/.well-known/oauth-authorization-server"
+        ],
+        "RequiredScope": "altinn:studio/designer"
     },
     "OidcLoginSettings": {
         "Authority": "http://studio.localhost/repos/",
