--- a/infra/runtime/syncroot/base/studio-gateway.yaml
+++ b/infra/runtime/syncroot/base/studio-gateway.yaml
@@ -36,7 +36,7 @@ spec:
   interval: 5m
   retryInterval: 5m
   timeout: 1m
-  prune: false
+  prune: true
   force: false
   wait: true
   path: ./${ENVIRONMENT}
