--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -13,5 +13,10 @@
         ],
         "RequiredScope": "altinn:studio/gateway",
         "ClientMetadataAddress": "https://test.maskinporten.no/.well-known/oauth-authorization-server"
+  },
+  "StudioEnvironments": {
+    "staging": {
+      "Url": "https://staging.altinn.studio/"
     }
+  }
 }
