--- a/src/Runtime/StudioGateway/infra/kustomize/base/kustomization.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/kustomization.yaml
@@ -7,6 +7,8 @@ resources:
   - networkpolicy.yaml
   - ingressroute.yaml
   - secrets.yaml
+  - role.yaml
+  - rolebinding.yaml
 replacements:
   - source:
       kind: Deployment
