fix role binding

--- a/src/Runtime/StudioGateway/infra/kustomize/base/rolebinding.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/rolebinding.yaml
@@ -6,7 +6,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: studio-gateway
-    namespace: flux-system
+    namespace: studio-gateway
 roleRef:
   kind: Role
   name: studio-gateway
