--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ langgraph>=0.6.8
 langchain-core>=0.3.78
 langchain-openai>=0.3.35
 openai>=1.57.2
+anthropic>=0.40.0
 langchain-community>=0.3.7
 langfuse>=3.0.0
 mlflow>=3.4.0
