--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -9,7 +9,8 @@
   "AppSettings": {
     "OpenIdWellKnownEndpoint": "http://localhost:5101/authentication/api/v1/openid/",
     "RuntimeCookieName": "AltinnStudioRuntime",
-    "RegisterEventsWithEventsComponent": false
+    "RegisterEventsWithEventsComponent": false,
+    "UseOpenTelemetry": true
   },
   "GeneralSettings": {
     "HostName": "local.altinn.cloud",
