feat: Gateway Maskinporten auth and public/internal network traffic separation (#17112)

--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Maskinporten": {
+        "MetadataAddresses": [
+            "https://test.maskinporten.no/.well-known/oauth-authorization-server",
+            "https://maskinporten.no/.well-known/oauth-authorization-server"
+        ],
+        "RequiredScope": "altinn:studio/gateway"
     }
-  },
-  "AllowedHosts": "*"
 }
