--- a/src/Runtime/StudioGateway/tests/StudioGateway.Api.Tests/StudioGateway.Api.Tests.csproj
+++ b/src/Runtime/StudioGateway/tests/StudioGateway.Api.Tests/StudioGateway.Api.Tests.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="TestData\**\*" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="..\..\infra\kustomize\fake-oidc\private-key.json" Link="TestData\fake-oidc-private-key.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,7 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="KubernetesClient" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="xunit.v3" />
     <PackageReference Include="xunit.runner.visualstudio" />
