feat(policy-editor): change design of role and access package selection (#16706)

--- a/src/Designer/backend/src/Designer/appsettings.json
+++ b/src/Designer/backend/src/Designer/appsettings.json
@@ -3,14 +3,8 @@
         "DatabaseConnectionString": "Data Source=AltinnCoreDatabase.sqlite"
     },
     "ImageUrlValidationSettings": {
-        "AllowedList": [
-            "altinn.studio/repos/*/wwwroot*"
-        ],
-        "BlockedList": [
-            "altinn-repositories",
-            "altinn-repositories:3000",
-            "altinn.studio"
-        ]
+        "AllowedList": ["altinn.studio/repos/*/wwwroot*"],
+        "BlockedList": ["altinn-repositories", "altinn-repositories:3000", "altinn.studio"]
     },
     "ServiceRepositorySettings": {
         "ApiEndPoint": "http://studio.localhost/repos/api/v1/",
@@ -33,6 +27,7 @@
         "ResourceRegistryEnvBaseUrl": "https://platform.{0}.altinn.cloud",
         "ResourceRegistryDefaultBaseUrl": "http://localhost:5100",
         "AccessPackagesUrl": "https://platform.tt02.altinn.no/accessmanagement/api/v1/meta/info/accesspackages/export",
+        "RolesUrl": "https://platform.tt02.altinn.no/accessmanagement/api/v1/meta/info/roles/",
         "AppClusterUrlPattern": "https://{org}.{appPrefix}.{hostName}"
     },
     "CacheSettings": {
@@ -127,11 +122,7 @@
     },
     "AnsattPortenLoginSettings": {
         "Authority": "https://test.ansattporten.no",
-        "Scopes": [
-            "openid",
-            "profile",
-            "idporten:dcr.datasharing"
-        ],
+        "Scopes": ["openid", "profile", "idporten:dcr.datasharing"],
         "CookieExpiryTimeInMinutes": 1,
         "AuthorizationDetails": [
             {
